# internal/server/http.go
@@ -3,7 +3,9 @@ package server
 import (
 	"crypto/rsa"
 	fileV1 "file/api/file/v1"
+	planV1 "file/api/plan/v1"
 	shareV1 "file/api/share/v1"
+	subV1 "file/api/subscription/v1"
 	"file/internal/conf"
 	"file/internal/service"
 
@@ -16,14 +18,15 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, d *conf.Data, fileService *service.FileService, shareService *service.ShareService, logger log.Logger, publicKey *rsa.PublicKey) *http.Server {
-	// ... (content truncated for clarity)
+func NewHTTPServer(c *conf.Server, d *conf.Data, fileService *service.FileService, shareService *service.ShareService, planService *service.PlanService, subService *service.SubscriptionService, logger log.Logger, publicKey *rsa.PublicKey) *http.Server {
 	jwtAuthn := jwt.Server(func(token *jwtv5.Token) (any, error) {
 		return publicKey, nil
 	}, jwt.WithSigningMethod(jwtv5.SigningMethodRS256))
 
 	authSelector := selector.Server(jwtAuthn).Match(NewWhiteListMatcher([]string{
 		"/api.file.v1.FileService/HealthCheck",
+		"/api.plan.v1.PlanService/ListPlans",
+		"/api.plan.v1.PlanService/GetPlan",
 		"/health",
 	})).Build()
 
@@ -45,5 +48,7 @@ func NewHTTPServer(c *conf.Server, d *conf.Data, fileService *service.FileServic
 	srv := http.NewServer(opts...)
 	fileV1.RegisterFileServiceHTTPServer(srv, fileService)
 	shareV1.RegisterShareServiceHTTPServer(srv, shareService)
+	planV1.RegisterPlanServiceHTTPServer(srv, planService)
+	subV1.RegisterSubscriptionServiceHTTPServer(srv, subService)
 	return srv
 }
